# bnn_for_14C_calibration

./: .gitattributes  .gitignore  environment.yml  pyproject.toml  requirements.txt
models/predictions/: drive_map.json  last_version_predictions_file.info
models/predictions/last_version/: bnn_part_1_with_covariables_middle_points_predictions.csv  bnn_part_1_without_covariables_middle_points_predictions.csv  bnn_part_2_with_covariables_middle_points_predictions.csv  bnn_part_2_without_covariables_middle_points_predictions.csv
models/weights/: bnn_part_1_with_covariables.weights.h5  bnn_part_1_without_covariables.weights.h5  bnn_part_2_with_covariables.weights.h5  bnn_part_2_without_covariables.weights.h5
src/bnn_for_14C_calibration/: bnn_models_built_in.py  calib_plot_functions.py  calibration.py  manage_cache.py  utils.py
src/bnn_for_14C_calibration/data/IntCal20/: IntCal20_completed.csv
src/bnn_for_14C_calibration/data/exogenous_variables/: be10.csv
tests/notebooks/: dev_test_for_functions_of_unbuilt_lib.ipynb  dev_test_for_unbuilt_lib.ipynb  local_test_for_built_lib.ipynb  local_test_for_unbuilt_lib.ipynb
